--- a/deploy/App.html
+++ b/deploy/App.html
@@ -7,8 +7,8 @@
 
     <script type="text/javascript">
         Rally.onReady(function () {
-                var TIME_PERIOD_IN_MONTHS=1,TIME_PERIOD_IN_MILLIS=2592e6*TIME_PERIOD_IN_MONTHS;Ext.define("CustomApp",{extend:"Rally.app.App",componentCls:"app",launch:function(){var today=new Date,timePeriod=new Date(today-TIME_PERIOD_IN_MILLIS);this.chartConfig.calculatorConfig.startDate=timePeriod,this.chartConfig.calculatorConfig.endDate=today;var p=this.getContext().getProject().ObjectID;console.log("p",p);var storeConfig={filters:[{property:"_ProjectHierarchy",operator:"in",value:[p]},{property:"_TypeHierarchy",operator:"in",value:["HierarchicalRequirement"]},{property:"_ValidFrom",operator:">",value:timePeriod.toISOString()}],autoLoad:!0,limit:1/0,fetch:["ObjectID","Name","_TypeHierarchy","Blocked","ScheduleState"],hydrate:["_TypeHierarchy","ScheduleState"]};this.chartConfig.storeConfig=storeConfig,this.add(this.chartConfig)},chartConfig:{xtype:"rallychart",itemId:"myChart",chartColors:["Green","Red","Green","Blue","Green","LightGray"],storeConfig:{},calculatorType:"MyTestCaseCalculator",calculatorConfig:{},chartConfig:{plotOptions:{column:{stacking:"normal"}},chart:{},title:{text:"Blocking History"},xAxis:{tickInterval:1,labels:{formatter:function(){var d=new Date(this.value);return""+(d.getMonth()+1)+"/"+d.getDate()}},title:{text:"Date"}},yAxis:[{title:{text:"Count"}}]}}});
-                Ext.define("MyTestCaseCalculator",{extend:"Rally.data.lookback.calculator.TimeSeriesCalculator",getMetrics:function(){var metrics=[{field:"Blocked",as:"Not Blocked",display:"column",f:"filteredCount",filterField:"Blocked",filterValues:[!1]},{field:"Blocked",as:"Blocked",display:"column",f:"filteredCount",filterField:"Blocked",filterValues:[!0]},{field:"ScheduleState",as:"Accepted",display:"line",f:"filteredCount",filterField:"ScheduleState",filterValues:["Accepted"]}];return metrics},getDerivedFieldsOnInput:function(){return[]},getDerivedFieldsAfterSummary:function(){return[]}});
+                Ext.define("CustomApp",{extend:"Rally.app.App",componentCls:"app",launch:function(){var TIME_PERIOD_IN_MONTHS=1,TIME_PERIOD_IN_MILLIS=2592e6*TIME_PERIOD_IN_MONTHS,today=new Date,timePeriod=new Date(today-TIME_PERIOD_IN_MILLIS),project=this.getContext().getProject().ObjectID;console.log("project",project);var storeConfig=this.createStoreConfig(project,timePeriod);this.chartConfig.calculatorConfig.startDate=timePeriod,this.chartConfig.calculatorConfig.endDate=today,this.chartConfig.storeConfig=storeConfig,this.add(this.chartConfig)},createStoreConfig:function(project,validFrom){return{listeners:{load:function(store,data){console.log("data",data.length)}},filters:[{property:"_ProjectHierarchy",operator:"in",value:[project]},{property:"_TypeHierarchy",operator:"in",value:["HierarchicalRequirement"]},{property:"_ValidFrom",operator:">",value:validFrom}],autoLoad:!0,limit:1/0,fetch:["ObjectID","Name","_TypeHierarchy","_ItemHierarchy","Blocked","ScheduleState","Feature","Parent"],hydrate:["_TypeHierarchy","ScheduleState"]}},chartConfig:{xtype:"rallychart",itemId:"myChart",chartColors:["Green","Red"],storeConfig:{},calculatorType:"MyTestCaseCalculator",calculatorConfig:{},chartConfig:{plotOptions:{column:{stacking:"normal"}},chart:{},title:{text:"Blocking History"},xAxis:{tickInterval:1,labels:{formatter:function(){var d=new Date(this.value);return""+(d.getMonth()+1)+"/"+d.getDate()}},title:{text:"Date"}},yAxis:[{title:{text:"Count"}}]}}});
+                Ext.define("MyTestCaseCalculator",{extend:"Rally.data.lookback.calculator.TimeSeriesCalculator",getMetrics:function(){var metrics=[{as:"Not Blocked",display:"column",f:"filteredCount",filterField:"Blocked",filterValues:[!1]},{as:"Blocked",display:"column",f:"filteredCount",filterField:"Blocked",filterValues:[!0]}];return metrics},getDerivedFieldsOnInput:function(){return[]},getDerivedFieldsAfterSummary:function(){return[]}});
 
             Rally.launchApp('CustomApp', {
                 name:"blockingtrendreport",
@@ -20,11 +20,9 @@
 
 
     <style type="text/css">
-        .app {
-     /* Add app styles here */
-}
-
+        
     </style>
 </head>
-<body></body>
+<body>
+</body>
 </html>
